fixed quotes and add ending frames

--- a/slides/class_1/class_1.tex
+++ b/slides/class_1/class_1.tex
@@ -30,11 +30,11 @@
 
 \begin{frame}{Princípios}
     \begin{enumerate}
-        \item Deve ser "simples, orientada a objetos, e familiar";
-        \item Deve ser "robusta e segura";
-        \item Deve ser "de arquitetura neutra e portátil";
-        \item Deve executar com "alta performance";
-        \item Deve ser "interpretada, dinâmica e com suporte a threads ";
+        \item Deve ser ``simples, orientada a objetos, e familiar'';
+        \item Deve ser ``robusta e segura'';
+        \item Deve ser ``de arquitetura neutra e portátil'';
+        \item Deve executar com ``alta performance'';
+        \item Deve ser ``interpretada, dinâmica e com suporte a threads'';
     \end{enumerate}
 \end{frame}
 
@@ -362,7 +362,7 @@ public class Application {
 \begin{frame}{Escolhendo o tipo de dado}
     Para resolver esse problema, algumas linguagens utilizam um tipo de dado
     especial que possui um número fixo de casas decimais, chamado
-    \texttt{Decimal} (ou "Fixed Point", em contrapartida com "Floating Point"),
+    \texttt{Decimal} (ou ``Fixed Point'', em contrapartida com ``Floating Point''),
     que pode servir para representar dinheiro (que sempre terá duas casas
     decimais apenas).
 
@@ -442,7 +442,7 @@ public class Application {
 \end{frame}
 
 \begin{frame}[fragile]{Variáveis lógicas}
-    Em programação, há um tipo de dado chamado "Lógico", que possui apenas dois
+    Em programação, há um tipo de dado chamado ``Lógico'', que possui apenas dois
     valores possíveis: \textbf{verdadeiro} e \textbf{falso}. Em Java, esse tipo
     se chama \texttt{boolean}:
 
@@ -476,7 +476,7 @@ public class Application {
 \end{frame}
 
 \begin{frame}[fragile]{Estrutura condicional \texttt{if}}
-    Para que nosso programa possa "escolher"\ se vai ou não executar determinado
+    Para que nosso programa possa ``escolher''\ se vai ou não executar determinado
     trecho, há uma estrutura de código chamada \texttt{if}, em que é entregue
     qualquer valor do tipo \texttt{boolean} entre parênteses e, se durante a
     execução esse valor for \texttt{true}, o trecho de código dentro das chaves
@@ -493,7 +493,7 @@ public class Application {
 \end{frame}
 
 \begin{frame}[fragile]{Exibindo texto no console}
-    Assim, para que o produto "Pão"\ seja apenas exibido se for comprado mais
+    Assim, para que o produto ``Pão''\ seja apenas exibido se for comprado mais
     de um pão, podemos escrever:
 
     \begin{minted}{java}
@@ -505,7 +505,7 @@ public class Application {
     \end{minted}
 
     \emph{OBS}: Perceba que é possível juntar textos (\texttt{String}s) com
-    outros valores (incluindo outras \texttt{String}s) utilizando "+".
+    outros valores (incluindo outras \texttt{String}s) utilizando ``+''.
 \end{frame}
 
 \begin{frame}{Escolhendo a forma de pagamento}
@@ -513,8 +513,8 @@ public class Application {
     Podemos estabelecer três opções:
 
     \begin{itemize}
-        \item Se o usuário digitar "C", o pagamento será efetuado com Cartão;
-        \item Se o usuário digitar "D", o pagamento será efetuado em dinheiro.
+        \item Se o usuário digitar ``C'', o pagamento será efetuado com Cartão;
+        \item Se o usuário digitar ``D'', o pagamento será efetuado em dinheiro.
         \item Para qualquer texto diferente que for digitado o programa irá
             alertar que a opção é inválida.
     \end{itemize}
@@ -539,18 +539,20 @@ public class Application {
     \end{minted}
 \end{frame}
 
+\section{Finalizando}
+
 \begin{frame}{Dicas}
     \begin{itemize}
         \item Para melhorar o aprendizado, é interessante tentar fazer algum
-            programa que gostaria (um jogo ou simulador - mesmo que textual -)
-            ou que sirva de utilitário (calculadora de notas) e pesquise como
-            pode ser feito;
+            programa que gostaria (um jogo ou simulador --- mesmo que textual
+            ---) ou que sirva de utilitário (calculadora de notas) e pesquise
+            como pode ser feito;
         \item Grande parte de suas dúvidas podem ser perguntadas no site
-            "StackOverflow" (lembrando de checar se ela já não foi respondida
-            antes - vale ler as regras do site antes de perguntar);
+            ``StackOverflow'' (lembrando de checar se ela já não foi respondida
+            antes --- vale ler as regras do site antes de perguntar);
     \end{itemize}
 
-    \footnotesize "Aprende quem fuça" - CANCIAN, Rafael Luiz
+    \footnotesize ``Aprende quem fuça'' --- CANCIAN, Rafael Luiz
 \end{frame}
 
 \begin{frame}{Material de Apoio}
@@ -558,14 +560,23 @@ public class Application {
         \item Exercícios com correção automática:
             \url{http://pet.inf.ufsc.br/~jptiz/academico/}
         \item Material do minicurso (explicação, códigos de exemplo, etc.):
-            \url{https://github.com/JPTIZ/java_minicourse/}
+            \url{https://github.com/JPTIZ/java-minicourse/}
     \end{itemize}
 
     Exercícios da aula de hoje:
     \begin{itemize}
-        \item POO-I - Unidade 1: Variáveis, Operadores e Estruturas
+        \item POO-I --- Unidade 1: Variáveis, Operadores e Estruturas
             Condicionais
             (\url{http://pet.inf.ufsc.br/~jptiz/academico/exercicio/?course=pooi&unit=0})
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Até mais e obrigado pelos peixes}
+    \textbf{Dúvidas?}
+    \begin{itemize}
+        \item PET Computação --- INE 521;
+        \item E-mail: \url{jpaulotiz@gmail.com};
+        \item Google-groups (para outros com a mesma dúvida poderem ver).
     \end{itemize}
 \end{frame}
 
